# authfort

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
client/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
client/src/: client.ts  errors.ts  index.ts  token-manager.ts  types.ts
client/src/react/: index.tsx
client/src/svelte/: index.ts
client/src/vue/: index.ts
client/tests/: client.test.ts  coverage-gaps.test.ts  mfa-oauth-redirect.test.ts  passwordless.test.ts  react.test.tsx  svelte.test.ts  token-manager.test.ts  vue.test.ts
docs/: status.md
docs-site/: astro.config.mjs  package-lock.json  package.json
docs-site/src/components/: ArchitectureDiagram.astro  CodeBlock.astro  FeatureGrid.astro  Hero.astro  PackageCard.astro  PackageInstall.astro  ServiceDiagram.astro  ThemeToggle.astro
docs-site/src/content/docs/: contributing.mdx  index.mdx
docs-site/src/content/docs/client/: authentication.mdx  bearer-storage.mdx  fetch.mdx  index.mdx  react.mdx  setup.mdx  state.mdx  svelte.mdx  vue.mdx
docs-site/src/content/docs/getting-started/: concepts.md  index.mdx  installation.mdx  quickstart.mdx
docs-site/src/content/docs/recipes/: multi-service.mdx  react-native.mdx  react-spa.mdx
docs-site/src/content/docs/reference/: client-api.mdx  server-api.mdx  server-cli.mdx  server-config.mdx  server-events.mdx  server-types.mdx  service-api.mdx
docs-site/src/content/docs/server/: authentication.mdx  ban-users.mdx  cleanup.mdx  configuration.mdx  cookies-and-bearer.mdx  database.mdx  email-verification.mdx  events.mdx  fastapi.mdx  key-rotation.mdx  magic-links.mdx  mfa.mdx  otp.mdx  password-management.mdx  (+4 more)
docs-site/src/styles/: global.css
examples/client-example/react/: index.html  package.json
examples/client-example/react/src/: App.tsx  main.tsx
examples/client-example/svelte/: index.html  package.json
examples/client-example/svelte/src/: App.svelte  auth.ts
examples/client-example/vanilla/: README.md  index.html
examples/client-example/vue/: index.html  package.json
examples/client-example/vue/src/: App.vue  main.ts
examples/fastapi-example/server/: main.py  pyproject.toml
examples/fastapi-example/service/: main.py  pyproject.toml
server/: README.md  pyproject.toml  vulture_whitelist.py
server/alembic/: env.py
server/alembic/versions/: c9c956c1a5bb_initial_schema.py
server/src/authfort/: __init__.py  alembic_helper.py  authfort.py  config.py  db.py  events.py  ratelimit.py
server/src/authfort/cli/: __init__.py  __main__.py
server/src/authfort/core/: auth.py  errors.py  keys.py  mfa.py  oauth.py  refresh.py  schemas.py  sessions.py  tokens.py  validation.py
server/src/authfort/integrations/fastapi/: __init__.py  cookies.py  deps.py  exception_handler.py  introspect_router.py  jwks_router.py  mfa_router.py  oauth_router.py  proxy.py  router.py
server/src/authfort/migrations/: env.py
server/src/authfort/migrations/versions/: 001_initial_schema.py  002_add_session_id.py  002_composite_index.py  003_add_mfa_tables.py  004_add_password_history.py  005_add_user_soft_delete.py  006_add_mfa_lockout.py
server/src/authfort/models/: __init__.py  account.py  base.py  mfa_backup_code.py  password_history.py  refresh_token.py  signing_key.py  user.py  user_mfa.py  user_role.py  verification_token.py
server/src/authfort/providers/: __init__.py  base.py  generic.py  github.py  google.py
server/src/authfort/repositories/: __init__.py  account.py  mfa_backup_code.py  password_history.py  refresh_token.py  role.py  signing_key.py  user.py  user_mfa.py  verification_token.py
server/src/authfort/utils/: __init__.py  passwords.py
server/tests/: conftest.py  test_alembic_helpers.py  test_ban.py  test_cleanup_profile_oauth.py  test_cookies.py  test_email_otp.py  test_email_verification.py  test_events.py  test_generic_oauth.py  test_hibp.py  test_integration.py  test_jwks.py  test_magic_link.py  test_mfa.py  test_mfa_hardening.py  test_migration.py  test_oauth.py  test_oauth_flow.py  test_password.py  test_password_history.py  test_providers.py  test_proxy.py  test_ratelimit.py  test_ratelimit_redis.py  test_refresh_cross_check.py  test_sessions.py  test_smoke.py  test_soft_delete.py  test_unit.py  test_user_management.py  test_validation.py  test_vapt_v0_0_26.py
service/: .gitignore  README.md  pyproject.toml  vulture_whitelist.py
service/src/authfort_service/: __init__.py  introspect.py  jwks.py  service_auth.py  verifier.py
service/src/authfort_service/integrations/: fastapi.py
service/tests/: conftest.py  test_cookie_fallback.py  test_introspect_client.py  test_jwks_fetcher.py  test_service_auth.py  test_verifier.py
(+10 files in other folders)
