[project]
name = "authfort"
version = "0.0.15"
description = "Comprehensive authentication and authorization library for Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Bhagyajit Jagdev"}]
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.5",
    "httpx>=0.28.1",
    "pyjwt[crypto]>=2.11.0",
    "sqlalchemy[asyncio]>=2.0",
]

[project.urls]
Homepage = "https://github.com/bhagyajitjagdev/authfort"
Repository = "https://github.com/bhagyajitjagdev/authfort"

[project.scripts]
authfort = "authfort.cli:main"

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.19"]
mysql = ["aiomysql>=0.2"]
fastapi = ["fastapi>=0.104"]

[dependency-groups]
dev = [
    "aiomysql>=0.3.2",
    "aiosqlite>=0.22.1",
    "fastapi>=0.129.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "vulture>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/authfort"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.coverage.run]
source = ["authfort"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
