[project]
name = "authfort-service"
version = "0.0.9"
description = "Lightweight JWT verification for AuthFort-powered microservices"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Bhagyajit Jagdev"}]
dependencies = [
    "cryptography>=46.0.5",
    "httpx>=0.28.1",
    "pyjwt[crypto]>=2.11.0",
]

[project.urls]
Homepage = "https://github.com/bhagyajitjagdev/authfort"
Repository = "https://github.com/bhagyajitjagdev/authfort"

[project.optional-dependencies]
fastapi = ["fastapi>=0.104"]

[dependency-groups]
dev = [
    "fastapi>=0.129.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "vulture>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/authfort_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.coverage.run]
source = ["authfort_service"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
